--- a/src/app/breakfast/breakfast.component.html
+++ b/src/app/breakfast/breakfast.component.html
@@ -1,6 +1,6 @@
 
 
-
+<h1 class="text-center mt-2">Breakfast & Cereals</h1>
 
  <div class="container-fluid mt-4"  >
     <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
@@ -28,4 +28,4 @@
     </div>
   </div>
   
-  
+  <app-footer></app-footer>
