--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -42,4 +42,6 @@
     </div>
         </div>
       </div>
+                                         <h2 class="text-center">Total Price is : {{sum}}</h2>
 </div>
+
