--- a/src/app/cookingoils/cookingoils.component.html
+++ b/src/app/cookingoils/cookingoils.component.html
@@ -1,7 +1,7 @@
 
 
 
-
+<h1 class="text-center mt-2">Cooking Oils</h1>
  <div class="container-fluid mt-4"  >
     <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
         <div class="col" *ngFor="let product of cookingoilsarray" >
@@ -28,4 +28,5 @@
     </div>
   </div>
   
+  <app-footer></app-footer>
   
