--- a/src/app/othergrocery/othergrocery.component.html
+++ b/src/app/othergrocery/othergrocery.component.html
@@ -1,7 +1,7 @@
 
 
 
-
+<h1 class="text-center mt-2">Other Groceries</h1>
  <div class="container-fluid mt-4"  >
     <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
         <div class="col" *ngFor="let product of othersarray" >
@@ -28,4 +28,4 @@
     </div>
   </div>
   
-  
+  <app-footer></app-footer>
