--- a/src/app/rice-products/rice-products.component.html
+++ b/src/app/rice-products/rice-products.component.html
@@ -20,8 +20,9 @@
                     
                 </div>
                 <div class="btn btn-toolbar" style="justify-content: space-between;">
-                <button class="btn btn-info m-2"  style="width: max-content;" (click)="gotoViewProduct(product.productid)">View</button>
-                <button class="btn btn-primary float-right m-2" style="width: max-content;"  (click)="addToCart(product)">Add to cart</button>
+                <button class="btn  m-2"  style="width: max-content;background-color: red; color: white; border-radius: 3px solid red; border:15px" (click)="gotoViewProduct(product.productid)">View</button>
+                <button class="btn  float-right m-2" style="width: max-content; 
+                background-color:darkblue; color: white; border-radius: 3px solid darkblue; border:15px"  (click)="addToCart(product)">Add to cart</button>
               </div>
             </div>
         </div>
