--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -36,12 +36,12 @@
             <!-- {{item.product.productdescription}} -->
             <div class="row mt-4">
             <div class="col-sm-3">  <button class="btn btn-danger" (click)="deleteprodincart(item)">Delete</button> </div>
-            <div class="col-sm-3">   <button class="btn btn-success ml-3">Checkout</button></div>
+            <div class="col-sm-3">   <button class="btn btn-success ml-3"  (click)="payment()">Checkout</button></div>
         </div>
         </div>
     </div>
         </div>
       </div>
-                                         <h2 class="text-center">Total Price is : {{sum}}</h2>
+                   <h2 class="text-center">Total Price is : {{sum}}</h2>
 </div>
 
