--- a/src/app/userdashboard/userdashboard.component.html
+++ b/src/app/userdashboard/userdashboard.component.html
@@ -25,7 +25,7 @@
         <div class="col-md-1">
             <div id="mySidenav" class="vertical-menu">
                 <a routerLink="myprofile" id="myprofile">My Profile</a>
-                <a href="#" id="myaddress">My Address</a>
+                <a routerLink="myaddress" id="myaddress">My Address</a>
                 <!-- <a routerLink="wishlist" id="readylist">Wish List</a> -->
                 <!-- <a routerLink="myorders" id="orders">My Orders</a> -->
               </div>
