--- a/src/app/viewproduct/viewproduct.component.html
+++ b/src/app/viewproduct/viewproduct.component.html
@@ -9,7 +9,7 @@
             <h2>{{product.productname }} </h2>
                 <h3><i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h3>
             <p class="lead">{{product.productdescription | titlecase}}</p>
-            <button class="btn-info float-center" (click)="addProductToCart(product)">Add to cart</button> 
+            <button class="btn float-center" style="background-color: chocolate; font-weight: bold; color: white; font-size: 20px;" (click)="addProductToCart(product)">Add to cart</button> 
         
         </div>
         </div>
