--- a/src/app/homecards/homecards.component.html
+++ b/src/app/homecards/homecards.component.html
@@ -48,8 +48,8 @@
                   
               </div>
               <div class="btn btn-toolbar" style="justify-content: space-between;">
-              <button class="btn  m-2"  style="width: max-content; background-color: red; color: white; border-radius: 3px solid red; border:15px" (click)="gotoViewProduct(product.productid)">View</button>
-              <button class="btn  float-right m-2" style="width: max-content;background-color:darkblue; color: white; border-radius: 3px solid darkblue; border:15px"  (click)="addToCart(product)">Add to cart</button>
+              <button class="btn  m-2"  style="width: max-content; background-color: red; color: white; border-radius: 3px solid red; border:15px" (click)="gotoViewProduct(product.productid)"><i class="far fa-eye-slash"></i>View</button>
+              <button class="btn  float-right m-2" style="width: max-content;background-color:darkblue; color: white; border-radius: 3px solid darkblue; border:15px"  (click)="addToCart(product)"><i class="fas fa-shopping-cart"></i>  Add to cart</button>
             </div>
           </div>
       </div>
