--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -46,7 +46,7 @@
 <div class="container">
     <div class="row "  >
         <div class="col-sm-2"></div>
-        <div class="col-sm-10">
+        <div class="col-sm-10 mx-auto d-block">
                 <div class="card w-100 h-100" id="card" style="background-color:lightyellow;">
                             <img src="https://gracecourtschools.org/static/img/avatar.png" class=" d-block mx-auto"alt=""  style="width: 50%;height:50%;padding:20px;">
                         <div class="card-body text-center">
