--- a/src/app/navbar1/navbar1.component.html
+++ b/src/app/navbar1/navbar1.component.html
@@ -80,14 +80,15 @@
            -->
 
  
- 
-             <div class="input-group md-form form-md form-2 pl-0">
-               <input class="form-control my-0 py-1 amber-border" type="text" [(ngModel)]="searchTerm" placeholder="Search By Name" style="font-size: 15px;" aria-label="Search">
+<!--  
+              <div class="input-group md-form form-md form-2 pl-0">
+               <input class="form-control my-0 py-1 amber-border" type="search" [(ngModel)]="searchTerm" placeholder="Search By Name" style="font-size: 15px;" aria-label="Search">
                <div class="input-group-append">
                  <span class="input-group-text amber lighten-3" id="basic-text1"><i class="fas fa-search fa-2x text-dark"
                                                                                     aria-hidden="true"> </i></span>
                </div>
-             </div>
+             </div>  -->
+
 
              <!-- <li class="nav-item">
               <a class="nav-link" id="cart" routerLink="cart" routerLinkActive="active" style="color: black;font-size: 20px;font-weight: bold;font-family: 'Courgette', cursive;color: black;"><i class="fas fa-shopping-cart" style="font-size: x-large;"></i></a>
