--- a/src/app/navbar2/navbar2.component.html
+++ b/src/app/navbar2/navbar2.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar  navbar-expand-lg  navbar-inverse navbar-light"  style="background: #222831 ;font-family: 'Amita', cursive;">
+<nav class="navbar  navbar-expand-md  navbar-inverse navbar-light"  style="background: #222831 ;font-family: 'Amita', cursive;">
     <div class="container-fluid" >
       <!-- <a class="navbar-brand" routerLink="pre"> <i>   </i></a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,10 +6,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         
-        <ul class="navbar-nav"  >
-         
+        <ul class="navbar-nav " style="margin-left: 100px;" >
+          <!-- style="align-content: space-between;" -->
         
-          <li class="nav-item" style="margin-left: 35px;" >
+          <li class="nav-item "  >
             <a class="nav-link" routerLink="dals-pulses" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;" >Dals & Pulses </a>
           </li>
           <li class="nav-item">
@@ -46,7 +46,7 @@
           <a class="nav-link" routerLink="othergrocery" routerLinkActive="active"style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Other Grocery</a>
         </li>
         
-      
+       
        
    
         </ul>
